# testcases

./: Cargo.toml  README.md
.circleci/: config.yml
.github/: rails_basics_ci.yml
.github/workflows/: rails_basics_ci.yml  rails_basics_ci_build_image.yml  reusable-dummy.yml
.github/workflows/rails_basics_ci_build_image/docker/: Dockerfile
benches/: ring_buffers.rs
confluent/: docker-compose.yml
confluent/rust/: Cargo.toml  build.rs
confluent/rust/src/: lib.rs  send_protobuf.rs  streaming.rs  streaming_avro.rs
docker/multi-stage-build/: build.sh
docker/multi-stage-build/crates/tcp_client/: Cargo.toml
docker/multi-stage-build/crates/tcp_client/src/: main.rs
docker/multi-stage-build/crates/tcp_server/: Cargo.toml
docker/multi-stage-build/crates/tcp_server/src/: main.rs
docker/multi-stage-build/docker/: Dockerfile
docker/multi-stage-cache/: Dockerfile  build.sh
mysql/: README.md  compose.yaml  docker-compose.yml
mysql/bind/conf.d/: my.cnf
mysql/docker/mysql/: Dockerfile
mysql/testcases/plan_change/: README.md  init_plan_change_test.sql  save_performance_logs.sh
mysql/testcases/plan_change/log/: REVERSE(title)_time.txt  REVERSE(title)_trace.txt  title_explain.txt  title_time.txt  title_trace.txt
mysql/testcases/recursive/: schema.sql  test.sql  tree.sql
protos/protobuf/v1/: exhaustive.proto  hello.proto  metrics.proto  migrate.proto
rails/: inverse_of_behavior.rb
rails/active_record_cache_methods/: README.md  compose.yaml  test_for_article.rb
rails/basics/: .gitignore  .rspec_parallel  Gemfile  README.md  Rakefile  docker-compose.yml
rails/basics/app/views/layouts/: application.html.erb
rails/basics/config/: application.rb  credentials.yml.enc  database.yml
rails/basics/config/environments/: development.rb  production.rb  test.rb
rails/basics/spec/: rails_helper.rb  spec_helper.rb
rails/basics/spec/models/: bar.rb  foo.rb  foo1.rb  foo1_spec.rb  foo2.rb  foo2_spec.rb  foo3.rb  foo3_spec.rb  foo4.rb  foo4_spec.rb  foo5.rb  foo5_spec.rb  foo6.rb  foo6_spec.rb  foo7.rb  foo7_spec.rb  foo8.rb  foo8_spec.rb
rust/: Cargo.toml  README.md  build.rs  build_config.yml  docker-compose.yml
rust/benches/: channels.rs  fan_in.rs  message_buses.rs  ring_buffers.rs
rust/docker/: Dockerfile
rust/protos/board/v1/: board.proto
rust/protos/protobuf/v2/: migrate.proto
rust/protos/test_proto/v1/: test_proto.proto
rust/src/: async_shutdown.rs  board.proto  lib.rs  rpassword.rs
rust/src/entry_points/: async_shutdown.rs  notify.rs  rpassword.rs
rust/src/unittest/: itertools.rs  keepass.rs  macro_training.rs  mod.rs  prost.rs
rust/src/unittest/std/collections/: b_tree_map.rs  mod.rs
rust/test_files/keepass/: README.md  crypt_password  testcases.kdbx
sql/: README.md  docker-compose.yml
sql/docker/mysql/: Dockerfile
src/: itertools.rs  lib.rs
