[package]
authors = ["Naoki Fujita <fujitanaoki0718@gmail.com>"]
edition = "2021"
name = "rust_studies"
version = "0.1.0"

[dependencies]
aes-gcm = "0.10.1"
arraydeque = "0.5.1"
async-shutdown = "0.1.2"
bondi = "0.1.2"
bounded-vec-deque = "0.1.1"
bus = "2.3.0"
chrono = "0.4.23"
circular-queue = "0.2.6"
criterion = { version = "0.4.0", features = ["html_reports"] }
futures = "0.3.26"
itertools = "0.10.5"
keepass = "0.5.0"
maplit = "1.0.2"
multiqueue2 = "0.1.7"
nix = "0.26.2"
notify = { version = "5.1.0", features = ["serde"] }
ordered-float = "3.6.0"
prost = "0.11.8"
prost-types = "0.11.8"
rb = "0.4.1"
rpassword = "7.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"

[build-dependencies]
prost-build = { version = "0.11.8" }

[[bench]]
harness = false
name = "ring_buffers"

[[bench]]
harness = false
name = "message_buses"

[[bench]]
harness = false
name = "fan_in"

[[bin]]
name = "async_shutdown"
path = "src/async_shutdown.rs"

[[bin]]
name = "notify"
path = "src/notify.rs"

[[bin]]
name = "rpassword"
path = "src/rpassword.rs"
