[package]
authors = ["Naoki Fujita <fujitanaoki0718@gmail.com>"]
edition = "2021"
name = "rust_studies"
version = "0.1.0"

[dependencies]
aes-gcm = "0.10.1"
arraydeque = "0.5.1"
async-shutdown = "0.2.2"
bondi = "0.1.2"
bounded-vec-deque = "0.1.1"
bus = "2.3.0"
chrono = "0.4.23"
circular-queue = "0.2.6"
criterion = { version = "0.5.1", features = ["html_reports"] }
expand = "0.3.0"
futures = "0.3.26"
itertools = "0.13.0"
keepass = "0.7.12"
lockfree = "0.5.1"
maplit = "1.0.2"
multiqueue2 = "0.1.7"
nix = "0.28.0"
notify = { version = "6.1.1", features = ["serde"] }
ordered-float = "4.2.0"
prost = "0.12.6"
prost-types = "0.12.6"
rb = "0.4.1"
rpassword = "7.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"

[build-dependencies]
prost-build = { version = "0.12.6" }

[[bench]]
harness = false
name = "ring_buffers"

[[bench]]
harness = false
name = "message_buses"

[[bench]]
harness = false
name = "fan_in"

[[bin]]
name = "async_shutdown"
path = "src/entry_points/async_shutdown.rs"

[[bin]]
name = "notify"
path = "src/entry_points/notify.rs"

[[bin]]
name = "rpassword"
path = "src/entry_points/rpassword.rs"
