[package]
authors = ["Naoki Fujita <fujitanaoki0718@gmail.com>"]
edition = "2021"
name = "rust_studies_kafka"
version = "0.1.0"

[dependencies]
chrono = "0.4.23"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
rdkafka = "0.29.0"
prost = "0.11.8"
prost-types = "0.11.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
rand = "0.8.5"
schema_registry_converter = { version = "3.1.0", features = ["proto_raw"] }

[build-dependencies]
prost-build = { version = "0.11.8" }

[[bin]]
name = "send_protobuf"
path = "src/send_protobuf.rs"

[[bin]]
name = "streaming_avro"
path = "src/streaming_avro.rs"
